--- a/index.html
+++ b/index.html
@@ -93,6 +93,6 @@
             
         </div>
     </header>
-    <script src="/assets/scripts/Script.js"></script>
+    <script src="assets/scripts/Script.js"></script>
 </body>
 </html>
