--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
     </header>
-    <script src="/assets/scripts/header.js"></script>
+    <script src="assets/scripts/header.js"></script>
         <main>
             <div class="container">
                 <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape01.png" alt="">
