--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
 
     <div class="cursor">
     </div>
-
     <header>
     </header>
     <script src="assets/scripts/header.js"></script>
         <main>
-            <div class="container">
+            <section class="main-area">
                 <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape01.png" alt="">
                 <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape02.png" alt="">
                 <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape03.png" alt="">
@@ -40,13 +39,16 @@
                         </div>
 
                 </div>
-                <div class="ads">
+                 <div class="ads">
+                    <div class="image">
+                        <img src="https://themedox.com/demo/mykd/assets/img/slider/slider_img01.png" alt="">
+                    </div>
                     <ul class="slider__brand-list list-wrap">
                         <li><a href="#"><img src="https://themedox.com/demo/mykd/assets/img/brand/brand_logo01.png" alt="brand"></a></li>
                         <li><a href="#"><img src="https://themedox.com/demo/mykd/assets/img/brand/brand_logo02.png" alt="brand"></a></li>
                         <li><a href="#"><img src="https://themedox.com/demo/mykd/assets/img/brand/brand_logo03.png" alt="brand"></a></li>
                     </ul>
-                </div>
+                </div> 
                 
                 </div>
 
@@ -54,9 +56,49 @@
                     <img src="https://themedox.com/demo/mykd/assets/img/slider/slider_img01.png" alt="">
                 </div>
 
-            </div>
-        </main>
+            </section>
+            <section class="main-area">
+                <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape01.png" alt="">
+                <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape02.png" alt="">
+                <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape03.png" alt="">
+                <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape04.png" alt="">
+                <div class="ads-and-texts">
+                    <div class="texts">
+                        <div class="live">
+                            live gaming
+                        </div>
+                        <h1>steaming</h1>
+                        <h2>video games online</h2>
+                        <div class="button button-green">
+                            <a href="https://themedox.com/mykd/my-account/" class="tg-border-btn">
+                                <svg preserveAspectRatio="none" viewBox="0 0 157 48" >
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M131.75 2L155.75 25L131.75 47L148.75 24L131.75 2Z" fill="white"></path>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M25 1L1 24.5111L25 47L8 23.4889L25 1Z" fill="white"></path>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M24.75 1L0.75 25L23.75 47H131.75L155.75 25L131.75 1H24.75Z" stroke="white" stroke-width="1.5"></path>
+                                </svg>
+                                <span> <i class="fa-solid fa-pen-to-square"></i>  Contact</span></a>
+                        </div>
 
+                </div>
+                 <div class="ads">
+                    <div class="image">
+                        <img src="https://themedox.com/demo/mykd/assets/img/slider/slider_img01.png" alt="">
+                    </div>
+                    <ul class="slider__brand-list list-wrap">
+                        <li><a href="#"><img src="https://themedox.com/demo/mykd/assets/img/brand/brand_logo01.png" alt="brand"></a></li>
+                        <li><a href="#"><img src="https://themedox.com/demo/mykd/assets/img/brand/brand_logo02.png" alt="brand"></a></li>
+                        <li><a href="#"><img src="https://themedox.com/demo/mykd/assets/img/brand/brand_logo03.png" alt="brand"></a></li>
+                    </ul>
+                </div> 
+                
+                </div>
+
+                <div class="image">
+                    <img src="https://themedox.com/demo/mykd/assets/img/slider/slider_img01.png" alt="">
+                </div>
+
+            </section>
+        </main>
     <script defer src="assets/scripts/Script.js"></script>
 </body>
 </html>
