--- a/index.html
+++ b/index.html
@@ -57,46 +57,55 @@
                 </div>
 
             </section>
-            <section class="main-area">
-                <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape01.png" alt="">
-                <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape02.png" alt="">
-                <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape03.png" alt="">
-                <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape04.png" alt="">
-                <div class="ads-and-texts">
-                    <div class="texts">
-                        <div class="live">
-                            live gaming
+            <section class="nft-item__area">
+                <div class="nft">
+                    <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_img01.jpg" alt="">
+                    <div class="details">
+                        <h1>wolf gaming art</h1>
+                        <div class="nft-item__avatar">
+                                <a href="shop-details.html"><img src="https://themedox.com/demo/mykd/assets/img/nft/nft_avatar.png" alt="img"></a>
+                                <h5 class="name"><a href="shop-details.html">Alax Max</a></h5>
+                                <span class="designation">Creator</span>
+                            </div>
+                            <div class="nft-item__price">
+                                <p>1.002 <span class="currency">Eth</span></p>
+                                <a href="shop-details.html" class="bid-btn">Bid <i class="fas fa-long-arrow-alt-right"></i></a>
+                            </div>
                         </div>
-                        <h1>steaming</h1>
-                        <h2>video games online</h2>
-                        <div class="button button-green">
-                            <a href="https://themedox.com/mykd/my-account/" class="tg-border-btn">
-                                <svg preserveAspectRatio="none" viewBox="0 0 157 48" >
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M131.75 2L155.75 25L131.75 47L148.75 24L131.75 2Z" fill="white"></path>
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M25 1L1 24.5111L25 47L8 23.4889L25 1Z" fill="white"></path>
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M24.75 1L0.75 25L23.75 47H131.75L155.75 25L131.75 1H24.75Z" stroke="white" stroke-width="1.5"></path>
-                                </svg>
-                                <span> <i class="fa-solid fa-pen-to-square"></i>  Contact</span></a>
-                        </div>
-
-                </div>
-                 <div class="ads">
-                    <div class="image">
-                        <img src="https://themedox.com/demo/mykd/assets/img/slider/slider_img01.png" alt="">
                     </div>
-                    <ul class="slider__brand-list list-wrap">
-                        <li><a href="#"><img src="https://themedox.com/demo/mykd/assets/img/brand/brand_logo01.png" alt="brand"></a></li>
-                        <li><a href="#"><img src="https://themedox.com/demo/mykd/assets/img/brand/brand_logo02.png" alt="brand"></a></li>
-                        <li><a href="#"><img src="https://themedox.com/demo/mykd/assets/img/brand/brand_logo03.png" alt="brand"></a></li>
-                    </ul>
-                </div> 
-                
                 </div>
-
-                <div class="image">
-                    <img src="https://themedox.com/demo/mykd/assets/img/slider/slider_img01.png" alt="">
+                <div class="nft">
+                    <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_img02.jpg" alt="">
+                    <div class="details">
+                        <h1>Forest Princess</h1>
+                        <div class="nft-item__avatar">
+                            <a href="shop-details.html"><img src="https://themedox.com/demo/mykd/assets/img/nft/nft_avatar.png" alt="img"></a>
+                            <h5 class="name"><a href="shop-details.html">Alax Max</a></h5>
+                            <span class="designation">Creator</span>
+                        </div>
+                        <div class="nft-item__price">
+                            <p>1.002 <span class="currency">Eth</span></p>
+                            <a href="shop-details.html" class="bid-btn">Bid <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </div>
+                    </div>
+                    </div>
                 </div>
-
+                <div class="nft">
+                    <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_img03.jpg" alt="">
+                    <div class="details">
+                        <h1>girl firefly art</h1>
+                        <div class="nft-item__avatar">
+                            <a href="shop-details.html"><img src="https://themedox.com/demo/mykd/assets/img/nft/nft_avatar.png" alt="img"></a>
+                            <h5 class="name"><a href="shop-details.html">Alax Max</a></h5>
+                            <span class="designation">Creator</span>
+                        </div>
+                        <div class="nft-item__price">
+                            <p>1.002 <span class="currency">Eth</span></p>
+                            <a href="shop-details.html" class="bid-btn">Bid <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </div>
+                    </div>
+                    </div>
+                </div>
             </section>
         </main>
     <script defer src="assets/scripts/Script.js"></script>
