Mobile Resonsiblity Fixed and Beautiful Buttons

--- a/index.html
+++ b/index.html
@@ -111,6 +111,32 @@
                 <section class="about__area">
                     <h5>know about us</h5>
                     <h1>top rated steamers</h1>
+                    <div class="btns">
+                        <a href="shop.html" class="tg-btn-2">buy Hero</a>
+                        <a href="shop.html" class="tg-btn-2 -secondary">buy nfts</a>
+                    </div>
+                    <div class="avatars">
+                        <ul class="nav nav-tabs" id="myTab" role="tablist">
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link active" id="about01-tab" data-bs-toggle="tab" data-bs-target="#about01" type="button" role="tab" aria-controls="about01" aria-selected="true"><span class="img-shape"></span><img src="https://themedox.com/demo/mykd/assets/img/others/about_tab01.png" alt="img"></button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" id="about02-tab" data-bs-toggle="tab" data-bs-target="#about02" type="button" role="tab" aria-controls="about02" aria-selected="false"><span class="img-shape"></span><img src="ahttps://themedox.com/demo/mykd/assets/img/others/about_tab02.png" alt="img"></button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link"><span class="img-shape"></span><img src="https://themedox.com/demo/mykd/assets/img/others/about_tab03.png" alt="img"></button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" ><span class="img-shape"></span><img src="https://themedox.com/demo/mykd/assets/img/others/about_tab04.png" alt="img"></button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link" ><span class="img-shape"></span><img src="https://themedox.com/demo/mykd/assets/img/others/about_tab05.png" alt="img"></button>
+                            </li>
+                            <li class="nav-item" role="presentation">
+                                <button class="nav-link"><span class="img-shape"></span><img src="https://themedox.com/demo/mykd/assets/img/others/about_tab07.png" alt="img"></button>
+                            </li>
+                        </ul>
+                    </div>
                 </section>
             </div>
 
