--- a/index.html
+++ b/index.html
@@ -117,23 +117,23 @@
                     </div>
                     <div class="avatars">
                         <ul class="nav nav-tabs" id="myTab" role="tablist">
-                            <li class="nav-item" role="presentation">
-                                <button class="nav-link active" id="about01-tab" data-bs-toggle="tab" data-bs-target="#about01" type="button" role="tab" aria-controls="about01" aria-selected="true"><span class="img-shape"></span><img src="https://themedox.com/demo/mykd/assets/img/others/about_tab01.png" alt="img"></button>
+                            <li>
+                                <img src="https://themedox.com/demo/mykd/assets/img/others/about_tab01.png" alt="img">
                             </li>
-                            <li class="nav-item" role="presentation">
-                                <button class="nav-link" id="about02-tab" data-bs-toggle="tab" data-bs-target="#about02" type="button" role="tab" aria-controls="about02" aria-selected="false"><span class="img-shape"></span><img src="ahttps://themedox.com/demo/mykd/assets/img/others/about_tab02.png" alt="img"></button>
+                            <li>
+                                <img src="https://themedox.com/demo/mykd/assets/img/others/about_tab02.png" alt="img">
                             </li>
-                            <li class="nav-item" role="presentation">
-                                <button class="nav-link"><span class="img-shape"></span><img src="https://themedox.com/demo/mykd/assets/img/others/about_tab03.png" alt="img"></button>
+                            <li>
+                                <img src="https://themedox.com/demo/mykd/assets/img/others/about_tab03.png" alt="img">
                             </li>
-                            <li class="nav-item" role="presentation">
-                                <button class="nav-link" ><span class="img-shape"></span><img src="https://themedox.com/demo/mykd/assets/img/others/about_tab04.png" alt="img"></button>
+                            <li>
+                                <img src="https://themedox.com/demo/mykd/assets/img/others/about_tab04.png" alt="img">
                             </li>
-                            <li class="nav-item" role="presentation">
-                                <button class="nav-link" ><span class="img-shape"></span><img src="https://themedox.com/demo/mykd/assets/img/others/about_tab05.png" alt="img"></button>
+                            <li>
+                                <img src="https://themedox.com/demo/mykd/assets/img/others/about_tab05.png" alt="img">
                             </li>
-                            <li class="nav-item" role="presentation">
-                                <button class="nav-link"><span class="img-shape"></span><img src="https://themedox.com/demo/mykd/assets/img/others/about_tab07.png" alt="img"></button>
+                            <li>
+                                <img src="https://themedox.com/demo/mykd/assets/img/others/about_tab06.png" alt="img">
                             </li>
                         </ul>
                     </div>
