--- a/index.html
+++ b/index.html
@@ -137,6 +137,30 @@
                             </li>
                         </ul>
                     </div>
+                    <div class="about01">
+                        <img src="https://www.themedox.com/demo/mykd/assets/img/others/about_img01.jpg" alt="">
+                        <div class="about01-content">
+                            <div class="row">
+                                <div class="col">
+                                    <h4>human game</h4>
+                                    <span class="rate">rate 50%</span>
+                                    <p>Lorem ipsum dolor sit amet, consteur adipiscing Duis elementum sollicitudin is yaugue euismods Nulla ullamcorper. Morbi pharetra tellus miolslis, tincidunt massa venenatis.</p>
+                                </div>
+                                <div class="col">
+                                    <ul>
+                                        <li><img src="https://www.themedox.com/demo/mykd/assets/img/icons/features_icon01.png" alt=""> Chichi Dragon Ball</li>
+                                        <li> <img src="https://www.themedox.com/demo/mykd/assets/img/icons/features_icon02.png" alt=""> Space Babe Night</li>
+                                        <li> <img src="https://www.themedox.com/demo/mykd/assets/img/icons/features_icon03.png" alt=""> Dragon Ball</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <button>Dragon Ball</button>
+                                <button>nft market</button>
+                                <button>support</button>
+                            </div>
+                        </div> 
+                    </div>
                 </section>
             </div>
 
