Respnsive Carusel and Home Page,Beign Users Panel

--- a/index.html
+++ b/index.html
@@ -34,14 +34,11 @@
                 <img class="quarter" src="https://themedox.com/demo/mykd/assets/img/slider/slider_shape04.png" alt="">
                 <div class="ads-and-texts">
                     <div class="texts">
-                        <div class="live" data-aos="fade-up"
-                        data-aos-anchor-placement="center-center">
+                        <div class="live">
                             live gaming
                         </div>
-                        <h1 data-aos="fade-up"
-                        data-aos-anchor-placement="center-center">steaming</h1>
-                        <h2 data-aos="fade-up"
-                        >video games online</h2>
+                        <h1>steaming</h1>
+                        <h2>video games online</h2>
                         <div class="button button-green">
                             <a href="https://themedox.com/mykd/my-account/" class="tg-border-btn">
                                 <svg preserveAspectRatio="none" viewBox="0 0 157 48" >
@@ -204,6 +201,7 @@
                                     <p>Rate 85%</p>
                                 </div></div>
                             </div>
+                            <div class="swiper-scrollbar"></div>
                           </div>
                         
                     </div>
@@ -223,15 +221,20 @@
                             centeredSlides: true,
                                 coverflowEffect: {
                                 },
-                                scrollbar: {
-                                    el: ".swiper-scrollbar",
-                                    hide: true,
-                                },
+                                
                         });
                       </script>
                 </section>
             </div>
+            <section class="users">
+                <div class="text">
+                    <span>our team member</span>
+                    <h3>ACTIVE TEAM MEMBERS</h3>
+                </div>
+                <div class="users-grup">
 
+                </div>
+            </section>
         </main>
     <script defer src="assets/scripts/Script.js"></script>
 </body>
