Video Area Completed

--- a/index.html
+++ b/index.html
@@ -248,6 +248,20 @@
                     
                 </div>
             </section>
+            <section class="video__area">
+                    <svg stroke="currentColor" fill="white" stroke-width="0" viewBox="0 0 512 512" height="6em" width="6em" xmlns="http://www.w3.org/2000/svg"><path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm115.7 272l-176 101c-15.8 8.8-35.7-2.5-35.7-21V152c0-18.4 19.8-29.8 35.7-21l176 107c16.4 9.2 16.4 32.9 0 42z"></path></svg>
+                <h1>JOIN THE <span style="color: rgb(69,248,130);">COMMUNITY</span></h1>
+                <h6>Join our Discord community and choosec onsteur</h6>
+                <div class="button button-green">
+                    <a href="https://themedox.com/mykd/my-account/" style="padding: 20px">
+                        <svg preserveAspectRatio="none" viewBox="0 0 157 48" >
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M131.75 2L155.75 25L131.75 47L148.75 24L131.75 2Z" fill="white"></path>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M25 1L1 24.5111L25 47L8 23.4889L25 1Z" fill="white"></path>
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M24.75 1L0.75 25L23.75 47H131.75L155.75 25L131.75 1H24.75Z" stroke="white" stroke-width="1.5"></path>
+                        </svg>
+                        <span style="font-size: 15px; font-weight: 700;">JOIN DISCORD</span></a>
+                </div>
+            </section>
         </main>
     <script defer src="assets/scripts/Script.js"></script>
 </body>
