Seasons Section Making

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M25 1L1 24.5111L25 47L8 23.4889L25 1Z" fill="white"></path>
                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M24.75 1L0.75 25L23.75 47H131.75L155.75 25L131.75 1H24.75Z" stroke="white" stroke-width="1.5"></path>
                                 </svg>
-                                <span> <i class="fa-solid fa-pen-to-square"></i>  Contact</span></a>
+                                <span>Contact</span></a>
                         </div>
 
                 </div>
@@ -260,6 +260,55 @@
                             <path fill-rule="evenodd" clip-rule="evenodd" d="M24.75 1L0.75 25L23.75 47H131.75L155.75 25L131.75 1H24.75Z" stroke="white" stroke-width="1.5"></path>
                         </svg>
                         <span style="font-size: 15px; font-weight: 700;">JOIN DISCORD</span></a>
+                </div>
+            </section>
+            <section class="seasons">
+                <div class="mobilroad">
+                    <h1>a look into roadmaps seasons</h1>
+                    <p>With Season 1 Ending with our play and Duis elementum sollicitudin is yaugue euismods Nulla ulla Player-focused updates games from Mobile App and Enjoy.</p>
+                    <div class="button button-orange">
+                        <a href="https://themedox.com/mykd/my-account/">
+                            <svg preserveAspectRatio="none" viewBox="0 0 157 48" >
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M131.75 2L155.75 25L131.75 47L148.75 24L131.75 2Z" fill="white"></path>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M25 1L1 24.5111L25 47L8 23.4889L25 1Z" fill="white"></path>
+                                <path fill-rule="evenodd" clip-rule="evenodd" d="M24.75 1L0.75 25L23.75 47H131.75L155.75 25L131.75 1H24.75Z" stroke="white" stroke-width="1.5"></path>
+                            </svg>
+                            <span style="font-size: 15px; font-weight: 700;">ROADMAP</span></a>
+                    </div>
+                    <img src="https://www.themedox.com/demo/mykd/assets/img/others/roadmap.png" alt="">
+                </div>
+                <div class="roadmap">
+                    
+                    <div class="season">
+                        <h2>SEASON 1</h2>
+                        <ul>
+                            <li>Battle Practice Mode</li>
+                            <li>Android Mobile</li>
+                            <li>iOS Open Beta</li>
+                            <li>Land Creation & Building</li>
+                        </ul>
+                        <img src="https://www.themedox.com/demo/mykd/assets/img/others/roadmap_img.png" alt="">
+                    </div>
+                    <div class="season">
+                        <h2>SEASON 2</h2>
+                        <ul>
+                            <li>Land Creation & Building</li>
+                            <li>Android Mobile</li>
+                            <li>iOS Open Beta</li>
+                            <li>Land Creation & Building</li>
+                        </ul>
+                        <img src="https://www.themedox.com/demo/mykd/assets/img/others/roadmap_img.png" alt="">
+                    </div>
+                    <div class="season">
+                        <h2>SEASON 3</h2>
+                        <ul>
+                            <li>Switch to 3D gameplay</li>
+                            <li>Android Mobile</li>
+                            <li>iOS Open Beta</li>
+                            <li>Land Creation & Building</li>
+                        </ul>
+                        <img src="https://www.themedox.com/demo/mykd/assets/img/others/roadmap_img.png" alt="">
+                    </div>
                 </div>
             </section>
         </main>
