Seasons Image Obsesed

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
                             </svg>
                             <span style="font-size: 15px; font-weight: 700;">ROADMAP</span></a>
                     </div>
-                    <img src="https://www.themedox.com/demo/mykd/assets/img/others/roadmap.png" alt="">
+                    <img id="roadmap" src="https://www.themedox.com/demo/mykd/assets/img/others/roadmap.png" alt="">
                 </div>
                 <div class="roadmap">
                     
