about page  and season page responsize

--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
                     </div>
                 </div>
             </section>
+            section.
         </main>
     <script defer src="assets/scripts/Script.js"></script>
 </body>
