--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 
 
     <div class="lds-ring"><div></div><div></div><div></div> </div>
-    <div class="cursor">
-    </div>
+
         <svg class="upper" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M0 0h24v24H0z"></path><path d="M15.5 5H11l5 7-5 7h4.5l5-7z"></path><path d="M8.5 5H4l5 7-5 7h4.5l5-7z"></path></svg>
     <header>
     </header>
@@ -78,7 +77,7 @@
                                 <h5 class="name"><a href="shop-details.html">Alax Max</a></h5>
                                 <span class="designation">Creator</span>
                             </div>
-                            <div class="nft-item__price">
+                            <div class="nft-item__price between">
                                 <p>1.002 <span class="currency">Eth</span></p>
                                 <a href="shop-details.html" class="bid-btn">Bid <i class="fas fa-long-arrow-alt-right"></i></a>
                             </div>
@@ -94,7 +93,7 @@
                             <h5 class="name"><a href="shop-details.html">Alax Max</a></h5>
                             <span class="designation">Creator</span>
                         </div>
-                        <div class="nft-item__price">
+                        <div class="nft-item__price between">
                             <p>1.002 <span class="currency">Eth</span></p>
                             <a href="shop-details.html" class="bid-btn">Bid <i class="fas fa-long-arrow-alt-right"></i></a>
                         </div>
@@ -110,7 +109,7 @@
                             <h5 class="name"><a href="shop-details.html">Alax Max</a></h5>
                             <span class="designation">Creator</span>
                         </div>
-                        <div class="nft-item__price">
+                        <div class="nft-item__price between">
                             <p>1.002 <span class="currency">Eth</span></p>
                             <a href="shop-details.html" class="bid-btn">Bid <i class="fas fa-long-arrow-alt-right"></i></a>
                         </div>
@@ -311,8 +310,43 @@
                     </div>
                 </div>
             </section>
-            section.
+            <section class="trending">
+
+                <h2>top Trending <img src="https://themedox.com/demo/mykd/assets/img/icons/fire.png" alt=""></h2>
+                <div class="swiper Swipper">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <div class="between">
+                            <div class="swipper-user">
+                                <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_avatar01.png" alt="">
+                                <div class="info">
+                                    <h6>Black Crypto</h6>
+                                    <a href="https://themedox.com/demo/mykd/shop-details.html">@Jon Max</a>
+                                </div>
+                            </div>
+                            <i class="far fa-heart"></i>
+                        </div>
+                      </div>
+                      <div class="swiper-slide">Slide 2</div>
+                      <div class="swiper-slide">Slide 3</div>
+                      <div class="swiper-slide">Slide 4</div>
+                      <div class="swiper-slide">Slide 5</div>
+                      <div class="swiper-slide">Slide 6</div>
+                      <div class="swiper-slide">Slide 7</div>
+                      <div class="swiper-slide">Slide 8</div>
+                      <div class="swiper-slide">Slide 9</div>
+                    </div>
+                  </div>
+                  <script>
+                    var swipper = new Swiper(".Swipper", {
+                      slidesPerView: 3,
+                      spaceBetween: 20,
+                    });
+                  </script>
+            </section>
         </main>
+        <div class="cursor">
+        </div>
     <script defer src="assets/scripts/Script.js"></script>
 </body>
 </html>
