--- a/index.html
+++ b/index.html
@@ -311,12 +311,107 @@
                 </div>
             </section>
             <section class="trending">
+                <div class="container">
+                    <div class="title">
+                        <h2>top Trending <img src="https://themedox.com/demo/mykd/assets/img/icons/fire.png" alt=""></h2>
+                        <div class="prevnext">
+                            <button class="swiper-sol">
+                                <i class="fas fa-angle-left"></i>
+                            </button>
+                            <button class="swiper-sag">
+                                <i class="fas fa-angle-right "></i>
+                            </button>
+                        </div>
 
-                <h2>top Trending <img src="https://themedox.com/demo/mykd/assets/img/icons/fire.png" alt=""></h2>
-                <div class="swiper Swipper">
-                    <div class="swiper-wrapper">
-                      <div class="swiper-slide">
-                        <div class="between">
+                    </div>
+
+                    <div class="swiper Swipper">
+                        <div class="swiper-wrapper">
+                          <div class="swiper-slide">
+                            <div class="between">
+                                <div class="swipper-user">
+                                    <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_avatar01.png" alt="">
+                                    <div class="info">
+                                        <h6>Black Crypto</h6>
+                                        <a href="https://themedox.com/demo/mykd/shop-details.html">@Jon Max</a>
+                                    </div>
+                                </div>
+                                <i class="far fa-heart"></i>
+                            </div>
+                            <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_img01.jpg" alt="">
+                            <span class="hr"></span>
+                            <div class="between">
+                                <div class="price">
+                                    <span class="bid">Last Bid</span>
+                                    <h6 class="eth"><i class="fab fa-ethereum"></i> 1.002 <span class="orange">Eth</span> </h6>
+                                </div>
+                                <a href="shop-details.html" class="bid-btn">Bid <i class="fas fa-long-arrow-alt-right"></i></a>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="between">
+                                <div class="swipper-user">
+                                    <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_avatar02.png" alt="">
+                                    <div class="info">
+                                        <h6>Black Crypto</h6>
+                                        <a href="https://themedox.com/demo/mykd/shop-details.html">@Jon Max</a>
+                                    </div>
+                                </div>
+                                <i class="far fa-heart"></i>
+                            </div>
+                            <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_img02.jpg" alt="">
+                            <span class="hr"></span>
+                            <div class="between">
+                                <div class="price">
+                                    <span class="bid">Last Bid</span>
+                                    <h6 class="eth"><i class="fab fa-ethereum"></i> 1.002 <span class="orange">Eth</span> </h6>
+                                </div>
+                                <a href="shop-details.html" class="bid-btn">Bid <i class="fas fa-long-arrow-alt-right"></i></a>
+                            </div>                        
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="between">
+                                <div class="swipper-user">
+                                    <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_avatar03.png" alt="">
+                                    <div class="info">
+                                        <h6>Black Crypto</h6>
+                                        <a href="https://themedox.com/demo/mykd/shop-details.html">@Jon Max</a>
+                                    </div>
+                                </div>
+                                <i class="far fa-heart"></i>
+                            </div>
+                            <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_img03.jpg" alt="">
+                            <span class="hr"></span>
+                            <div class="between">
+                                <div class="price">
+                                    <span class="bid">Last Bid</span>
+                                    <h6 class="eth"><i class="fab fa-ethereum"></i> 1.002 <span class="orange">Eth</span> </h6>
+                                </div>
+                                <a href="shop-details.html" class="bid-btn">Bid <i class="fas fa-long-arrow-alt-right"></i></a>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">
+                            <div class="between">
+                                <div class="swipper-user">
+                                    <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_avatar02.png" alt="">
+                                    <div class="info">
+                                        <h6>Black Crypto</h6>
+                                        <a href="https://themedox.com/demo/mykd/shop-details.html">@Jon Max</a>
+                                    </div>
+                                </div>
+                                <i class="far fa-heart"></i>
+                            </div>
+                            <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_img04.jpg" alt="">
+                            <span class="hr"></span>
+                            <div class="between">
+                                <div class="price">
+                                    <span class="bid">Last Bid</span>
+                                    <h6 class="eth"><i class="fab fa-ethereum"></i> 1.002 <span class="orange">Eth</span> </h6>
+                                </div>
+                                <a href="shop-details.html" class="bid-btn">Bid <i class="fas fa-long-arrow-alt-right"></i></a>
+                            </div>
+                          </div>
+                          <div class="swiper-slide">                        <div class="between">
                             <div class="swipper-user">
                                 <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_avatar01.png" alt="">
                                 <div class="info">
@@ -326,23 +421,30 @@
                             </div>
                             <i class="far fa-heart"></i>
                         </div>
+                        <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_img05.jpg" alt="">
+                        <span class="hr"></span>
+                        <div class="between">
+                            <div class="price">
+                                <span class="bid">Last Bid</span>
+                                <h6 class="eth"><i class="fab fa-ethereum"></i> 1.002 <span class="orange">Eth</span> </h6>
+                            </div>
+                            <a href="shop-details.html" class="bid-btn">Bid <i class="fas fa-long-arrow-alt-right"></i></a>
+                        </div></div>
+                        </div>
                       </div>
-                      <div class="swiper-slide">Slide 2</div>
-                      <div class="swiper-slide">Slide 3</div>
-                      <div class="swiper-slide">Slide 4</div>
-                      <div class="swiper-slide">Slide 5</div>
-                      <div class="swiper-slide">Slide 6</div>
-                      <div class="swiper-slide">Slide 7</div>
-                      <div class="swiper-slide">Slide 8</div>
-                      <div class="swiper-slide">Slide 9</div>
-                    </div>
-                  </div>
-                  <script>
-                    var swipper = new Swiper(".Swipper", {
-                      slidesPerView: 3,
-                      spaceBetween: 20,
-                    });
-                  </script>
+                      <script>
+                        var swipper = new Swiper(".Swipper", {
+                          slidesPerView: window.innerWidth>768? 3:1,
+                          spaceBetween: 20,
+                          loop:true,
+                          navigation: {
+                          nextEl: ".swiper-sag",
+                          prevEl: ".swiper-sol",
+                          },
+                        });
+                      </script>
+                </div>
+                    
             </section>
         </main>
         <div class="cursor">
