--- a/index.html
+++ b/index.html
@@ -434,7 +434,17 @@
                       </div>
                       <script>
                         var swipper = new Swiper(".Swipper", {
-                          slidesPerView: window.innerWidth>768? 3:1,
+                          slidesPerView: (()=>{
+                            if(window.innerWidth>1000){
+                                return 3
+                            }
+                            else if(window.innerWidth>768 && window.innerWidth<1000){
+                                return 2
+                            }
+                            else{
+                                return 1
+                            }
+                          })(),
                           spaceBetween: 20,
                           loop:true,
                           navigation: {
@@ -447,6 +457,49 @@
                     
             </section>
         </main>
+        <footer>
+            <div class="bigfooter">
+                <div class="logoabout">
+                    <img src="https://themedox.com/demo/mykd/assets/img/logo/logo.png" alt="">
+                    <p>Lorem ipsum dolor sitamet consectur adipiscing Duis esollici tudin augue euismod. Nulla ullam dolor sitamet consectetur</p>
+                    <b>Active <span class="green">With Us <i class="fas fa-angle-double-right"></i></span></b>
+                    <div class="footer-social">
+                        <a href="#"><img src="https://themedox.com/demo/mykd/assets/img/icons/social_icon01.png" alt="iocn"></a>
+                        <a href="#"><img src="https://themedox.com/demo/mykd/assets/img/icons/social_icon02.png" alt="iocn"></a>
+                        <a href="#"><img src="https://themedox.com/demo/mykd/assets/img/icons/social_icon03.png" alt="iocn"></a>
+                        <a href="#"><img src="https://themedox.com/demo/mykd/assets/img/icons/social_icon04.png" alt="iocn"></a>
+                    </div>
+                </div>
+                <div class="quiclink">
+                    <h6>Quick Links</h6>
+                    <ul>
+                        <li>Gaming</li>
+                        <li>Product</li>
+                        <li>All NFTs</li>
+                        <li>Social Network</li>
+                        <li>Domain Names</li>
+                        <li>Collectibles</li>
+                    </ul>
+                </div>
+                <div class="Supports">
+                    <h6>Supports</h6>
+                    <ul>
+                        <li>Gaming</li>
+                        <li>Product</li>
+                        <li>All NFTs</li>
+                        <li>Social Network</li>
+                        <li>Domain Names</li>
+                        <li>Collectibles</li>
+                    </ul>
+                </div>
+                <div class="newsletter">
+                    <h6>Newsletter</h6>
+                    <p>Subscribe our newsletter to get our latest update & newsconsectetur</p>
+                    <input type="text">
+                </div>
+            </div>
+            <div class="subfooter"></div>
+        </footer>
         <div class="cursor">
         </div>
     <script defer src="assets/scripts/Script.js"></script>
