Mouse Problem Fix Footer Makeing

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                 <div class="newsletter">
                     <h6>Newsletter</h6>
                     <p>Subscribe our newsletter to get our latest update & newsconsectetur</p>
-                    <input type="text">
+                    <input type="email" placeholder="Your email address">
                 </div>
             </div>
             <div class="subfooter"></div>
