--- a/index.html
+++ b/index.html
@@ -495,10 +495,17 @@
                 <div class="newsletter">
                     <h6>Newsletter</h6>
                     <p>Subscribe our newsletter to get our latest update & newsconsectetur</p>
-                    <input type="email" placeholder="Your email address">
+                    <div class="input">
+                        <input type="email" placeholder="Your email address"><button><img src="https://cdn-icons-png.flaticon.com/128/724/724954.png" loading="lazy" alt="Right arrow " title="Right arrow " width="64" height="64"></button>
+                    </div>
+                    
                 </div>
             </div>
-            <div class="subfooter"></div>
+            <div class="subfooter">
+                <div class="copyright">Copyright © 2024 - All Rights Reserved By <span class="green">Mykd</span> 
+                </div>
+                <img src="https://themedox.com/demo/mykd/assets/img/others/payment_card.png" alt="">
+            </div>
         </footer>
         <div class="cursor">
         </div>
