--- a/index.html
+++ b/index.html
@@ -507,8 +507,17 @@
                 <img src="https://themedox.com/demo/mykd/assets/img/others/payment_card.png" alt="">
             </div>
         </footer>
+        <div class="popup">
+            <div class="container">
+                <i class="fa-solid fa-xmark"></i>
+                <div class="picture">
+                    
+                </div>
+            </div>
+        </div>
         <div class="cursor">
         </div>
     <script defer src="assets/scripts/Script.js"></script>
+    <script src="assets/scripts/popup.js"></script>
 </body>
 </html>
