--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@
 </head>
 <body>
 
-
-
-
-
-
     <div class="lds-ring"><div></div><div></div><div></div> </div>
 
         <svg class="upper" stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M0 0h24v24H0z"></path><path d="M15.5 5H11l5 7-5 7h4.5l5-7z"></path><path d="M8.5 5H4l5 7-5 7h4.5l5-7z"></path></svg>
@@ -82,7 +77,7 @@
                                 <a href="shop-details.html" class="bid-btn">Bid <i class="fas fa-long-arrow-alt-right"></i></a>
                             </div>
                         </div>
-                    </div>
+                    </div> 
                 </div>
                 <div class="nft">
                     <img src="https://themedox.com/demo/mykd/assets/img/nft/nft_img02.jpg" alt="">
@@ -458,55 +453,8 @@
             </section>
         </main>
         <footer>
-            <div class="bigfooter">
-                <div class="logoabout">
-                    <img src="https://themedox.com/demo/mykd/assets/img/logo/logo.png" alt="">
-                    <p>Lorem ipsum dolor sitamet consectur adipiscing Duis esollici tudin augue euismod. Nulla ullam dolor sitamet consectetur</p>
-                    <b>Active <span class="green">With Us <i class="fas fa-angle-double-right"></i></span></b>
-                    <div class="footer-social">
-                        <a href="#"><img src="https://themedox.com/demo/mykd/assets/img/icons/social_icon01.png" alt="iocn"></a>
-                        <a href="#"><img src="https://themedox.com/demo/mykd/assets/img/icons/social_icon02.png" alt="iocn"></a>
-                        <a href="#"><img src="https://themedox.com/demo/mykd/assets/img/icons/social_icon03.png" alt="iocn"></a>
-                        <a href="#"><img src="https://themedox.com/demo/mykd/assets/img/icons/social_icon04.png" alt="iocn"></a>
-                    </div>
-                </div>
-                <div class="quiclink">
-                    <h6>Quick Links</h6>
-                    <ul>
-                        <li>Gaming</li>
-                        <li>Product</li>
-                        <li>All NFTs</li>
-                        <li>Social Network</li>
-                        <li>Domain Names</li>
-                        <li>Collectibles</li>
-                    </ul>
-                </div>
-                <div class="Supports">
-                    <h6>Supports</h6>
-                    <ul>
-                        <li>Gaming</li>
-                        <li>Product</li>
-                        <li>All NFTs</li>
-                        <li>Social Network</li>
-                        <li>Domain Names</li>
-                        <li>Collectibles</li>
-                    </ul>
-                </div>
-                <div class="newsletter">
-                    <h6>Newsletter</h6>
-                    <p>Subscribe our newsletter to get our latest update & newsconsectetur</p>
-                    <div class="input">
-                        <input type="email" placeholder="Your email address"><button><img src="https://cdn-icons-png.flaticon.com/128/724/724954.png" loading="lazy" alt="Right arrow " title="Right arrow " width="64" height="64"></button>
-                    </div>
-                    
-                </div>
-            </div>
-            <div class="subfooter">
-                <div class="copyright">Copyright © 2024 - All Rights Reserved By <span class="green">Mykd</span> 
-                </div>
-                <img src="https://themedox.com/demo/mykd/assets/img/others/payment_card.png" alt="">
-            </div>
         </footer>
+        <script src="assets/scripts/footer.js"></script>
         <div class="popup">
             <div class="container">
                 <i class="fa-solid fa-xmark"></i>
@@ -517,6 +465,8 @@
         </div>
         <div class="cursor">
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
     <script defer src="assets/scripts/Script.js"></script>
 </body>
 </html>
