--- a/index-2.html
+++ b/index-2.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MYKD -eSports and Gaming NFT Theme</title>
     <link rel="stylesheet" href="assets/styles/global.css" />
-    <link rel="stylesheet" href="assets/styles/Hometwo/style.css" />
+    
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
@@ -25,7 +25,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
   </head>
-  <body>
+  <body data-barba="wrapper">
     <div class="lds-ring">
       <div></div>
       <div></div>
@@ -48,7 +48,8 @@
     </svg>
     <header></header>
     <script src="assets/scripts/header.js"></script>
-    <main>
+    <main data-barba="container">
+      <link rel="stylesheet" href="assets/styles/Hometwo/style.css" />
       <section class="main-area">
         <div class="texts">
           <h1>steaming</h1>
@@ -183,9 +184,9 @@
       </div>
     </div>
     <div class="cursor"></div>
+    <script src="assets/scripts/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@barba/core"></script>
-    <script defer src="assets/scripts/Script.js"></script>
+    <script src="https://unpkg.com/@barba/core"></script>
     <script src="assets/scripts/transition.js"></script>
   </body>
 </html>
